# simplicity-lang-org

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  jets.json  jets.md.py  mkdocs.yml  requirements.txt
.github/: copilot-instructions.md
docs/: glossary.md  index.md  office-hours.md
docs/assets/: 9e9ecabd-7792-4970-a69c-28847b5e9c99.false  p2ms-demo.sh
docs/documentation/: execution-model.md  how-simplicity-works.md  jets-explained.md  jets-overview.md  jets.md  jets1.md  jets2.md  jets3.md  oracle.md  road-to-ecosystem.md  rust-differences.md  simplicity-for-evm-developers.md  state.md  timelocks.md  toolchain.md  wallet.md  witness.md
docs/getting-started/: bash-quickstart.md  cli.md  projects.md  quickstart.md  quickstart2.md  rust-quickstart.md  simplicityhl.md  toolchain.md  web-ide.md  welcome-bitcoin.md  welcome-evm.md  welcome-finance.md
docs/javascript/: mathjax.js
docs/news/: index.md
docs/news/posts/: article-disconnecting-simplicity-expressions.md  article-github-repository.md  article-holes-and-side-effects.md  article-introducing-simplicity.md  article-jets-release.md  article-miniscript-to-simplicity.md  article-new-language.md  (+19 more)
docs/resources/: contribute.md  faq.md  projects.md  roadmap.md
docs/simplicityhl-reference/: builtin.md  if_expression.md  match_expression.md  operators.md  type.md  type_casting.md
docs/stylesheets/: extra.css
docs/use-cases/: index.md  lending-protocol.md  simplicity-dex.md
docs_crate/: jet.rs  lib.rs  main.rs
includes/hooks/: autolink_glossary.py
overrides/: 404.html  main.html
